# carmen-lang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.Apache  LICENSE.MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/pull_request_template/: bugfix.md  documentation.md  feature.md  refactor.md
.github/workflows/: ci.yml
docs/: language_manual.md
examples/: example.carmen
src/: cli.rs  lib.rs  main.rs
src/ast/: inspector.rs  mod.rs  spanned.rs
src/common/: fraction.rs  mod.rs  utils.rs
src/core/: mod.rs  traits.rs
src/errors/: mod.rs  reporter.rs
src/exporter/: lilypond.rs  mod.rs  text.rs
src/interpreter/: arg_extraction.rs  builtins.rs  mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs
src/repl/: command.rs  engine.rs  helper.rs  mod.rs  ui.rs  visualize.rs
tests/integration/: interpreter_test.rs  mod.rs
tests/unit/: mod.rs
tests/unit/ast/: inspector.rs  mod.rs  spanned.rs
tests/unit/common/: fraction.rs  mod.rs  utils.rs
tests/unit/core/: invert_tests.rs  mod.rs
tests/unit/errors/: mod.rs  reporter.rs
tests/unit/exporter/: common.rs  lilypond.rs  mod.rs  text.rs
tests/unit/interpreter/: arg_extraction.rs  builtins.rs  mod.rs
tests/unit/lexer/: mod.rs
tests/unit/parser/: mod.rs
